--- a/ogroup.yaml
+++ b/ogroup.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  generateName: openshift-keda-
+  name: openshift-keda-opgroup
   namespace: openshift-keda
 spec:
   targetNamespaces:
